// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkStar should render correctly with a "className" prop 1`] = `
<svg
  className="bpk-star bpk-star--filled my-class bpk-icon--rtl-support"
  height="18"
  style={
    Object {
      "height": "1.125rem",
      "width": "1.125rem",
    }
  }
  viewBox="0 0 24 24"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
  />
</svg>
`;

exports[`BpkStar should render correctly with a large empty star 1`] = `
<svg
  className="bpk-star bpk-star--large bpk-icon--rtl-support"
  height="24"
  style={
    Object {
      "height": "1.5rem",
      "width": "1.5rem",
    }
  }
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
  />
</svg>
`;

exports[`BpkStar should render correctly with a large full star 1`] = `
<svg
  className="bpk-star bpk-star--large bpk-star--filled bpk-icon--rtl-support"
  height="24"
  style={
    Object {
      "height": "1.5rem",
      "width": "1.5rem",
    }
  }
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
  />
</svg>
`;

exports[`BpkStar should render correctly with a large half star 1`] = `
<span
  className="bpk-star__container bpk-star__container--half-star bpk-star__container--large bpk-icon--rtl-support"
>
  <svg
    className="bpk-star bpk-star--half bpk-star--filled"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z"
    />
  </svg>
  <svg
    className="bpk-star bpk-star--half bpk-star--half-flipped"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z"
    />
  </svg>
</span>
`;

exports[`BpkStar should render correctly with empty star 1`] = `
<svg
  className="bpk-star bpk-icon--rtl-support"
  height="18"
  style={
    Object {
      "height": "1.125rem",
      "width": "1.125rem",
    }
  }
  viewBox="0 0 24 24"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
  />
</svg>
`;

exports[`BpkStar should render correctly with full star 1`] = `
<svg
  className="bpk-star bpk-star--filled bpk-icon--rtl-support"
  height="18"
  style={
    Object {
      "height": "1.125rem",
      "width": "1.125rem",
    }
  }
  viewBox="0 0 24 24"
  width="18"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17.349 14.762l3.535-4.415a.528.528 0 0 0-.26-.838L15.35 8.131l-2.915-4.887a.484.484 0 0 0-.841 0l-2.881 4.83-5.337 1.394a.528.528 0 0 0-.26.839L6.61 14.67l-.383 5.748a.5.5 0 0 0 .68.518l5.04-3.172 5.1 3.198a.5.5 0 0 0 .68-.518z"
  />
</svg>
`;

exports[`BpkStar should render correctly with half star 1`] = `
<span
  className="bpk-star__container bpk-star__container--half-star bpk-icon--rtl-support"
>
  <svg
    className="bpk-star bpk-star--half bpk-star--filled"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z"
    />
  </svg>
  <svg
    className="bpk-star bpk-star--half bpk-star--half-flipped"
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17.6V3c-.3 0-.6.2-.8.5L9 8c-.1.3-.4.4-.7.5l-4.5.7c-.7.1-1 1-.5 1.5l3.8 3.5c.2.2.3.5.3.8l-1.5 5c-.1.7.6 1.3 1.3.9l4.8-3.3z"
    />
  </svg>
</span>
`;
